Add setup script

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -197,6 +197,12 @@
       "problemMatcher": []
     },
     {
+      "label": "setup",
+      "type": "shell",
+      "command": "./setup.sh",
+      "problemMatcher": []
+    },
+    {
       "label": "debugger prelaunch",
       "type": "shell",
       "command": "pwd; cp mkdocs-test.yml mkdocs.yml; /home/vscode/.local/bin/mkdocs_simple_gen --no-build",
