--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -187,7 +187,7 @@
     {
       "label": "package",
       "type": "shell",
-      "command": "python3 setup.py sdist bdist_wheel",
+      "command": "hatch build",
       "problemMatcher": []
     },
     {
