--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,10 @@
 site_name: athackst/mkdocs-simple-plugin
 docs_dir: /tmp/mkdocs-simple/mkdocs-simple-plugin
 plugins:
-  - simple
+  - simple:
+      build_docs_dir: build/docs
+      ignore_folders:
+        - venv/*
   - awesome-pages
   - macros
   - search
