--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,8 +27,8 @@ markdown_extensions:
   - pymdownx.highlight:
       use_pygments: true
   - pymdownx.emoji:
-      emoji_index: !!python/name:materialx.emoji.twemoji ''
-      emoji_generator: !!python/name:materialx.emoji.to_svg ''
+      emoji_index: !!python/name:pymdownx.emoji.gemoji ''
+      emoji_generator: !!python/name:pymdownx.emoji.to_png ''
   - mkdocs-click
 extra:
   social:
