Copy includes metadata

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,7 +66,7 @@
         "-s",
         "./tests",
         "-p",
-        "*_test.py"
+        "test_*.py"
     ],
     "python.testing.pytestEnabled": false,
     "python.testing.nosetestsEnabled": false,
