Use on_files instead of prebuild

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,6 +43,7 @@
         "superfences",
         "thackston",
         "twemoji",
+        "unwatch",
         "VPNW",
         "yapf",
         "yzhang"
