--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -73,10 +73,35 @@
       }
     },
     {
-      "label": "build docker",
+      "label": "action build",
       "type": "shell",
       "command": "docker build -t althack/mkdocs-simple-plugin:latest -f Dockerfile .",
       "problemMatcher": []
+    },
+    {
+      "label": "action dry run",
+      "type": "shell",
+      "command": "docker run --rm -v ${workspaceFolder}:/docs -e INPUT_PUSH --user $(id -u):$(id -g) althack/mkdocs-simple-plugin:latest deploy.sh",
+      "options": {
+        "env": {
+          "INPUT_PUSH": "false"
+        }
+      }
+    },
+    {
+      "label": "action dry run (root)",
+      "type": "shell",
+      "command": "docker run --rm -v ${workspaceFolder}:/docs -e INPUT_PUSH althack/mkdocs-simple-plugin:latest deploy.sh",
+      "options": {
+        "env": {
+          "INPUT_PUSH": "false"
+        }
+      }
+    },
+    {
+      "label": "action serve",
+      "type": "shell",
+      "command": "docker run --rm -p 8000:8000 -v ${PWD}:/docs  --user $(id -u):$(id -g) -it althack/mkdocs-simple-plugin:latest"
     },
     {
       "label": "test",
