--- a/.github/workflows/release_draft.yml
+++ b/.github/workflows/release_draft.yml
@@ -32,16 +32,18 @@ jobs:
       contents: write
     runs-on: ubuntu-latest
     needs: update_release_draft
+    env:
+      VERSION: ${{ needs.update_release_draft.outputs.tag_name }}
     steps:
       - uses: actions/checkout@v3
         with:
           token: ${{ secrets.RELEASEBOT_TOKEN }}
       - name: Bump setup.py
-        env:
-          VERSION: ${{ needs.update_release_draft.outputs.tag_name }}
         run: |
           echo "Bumping version to ${VERSION}"
           echo "${VERSION}" > VERSION
+      - name: Commit and push
+        run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add VERSION
