Don't copy by default, add option to enable instead.

--- a/examples/ok-with-macros/mkdocs-test.yml
+++ b/examples/ok-with-macros/mkdocs-test.yml
@@ -9,6 +9,7 @@ plugins:
           include:
               - ".yml"
     - macros:
+          include_dir: "."
           verbose: True
 extra:
     test: True
