--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "bdist",
         "codeql",
         "dedupe",
+        "devcontainer",
         "devcontainers",
         "dockerfiles",
         "dockerhub",
@@ -72,18 +73,6 @@
         "./tests",
         "-p",
         "test_*.py"
-    ],
-    "python.testing.pytestEnabled": false,
-    "python.testing.nosetestsEnabled": false,
-    "python.linting.pydocstyleEnabled": true,
-    "python.linting.flake8Enabled": true,
-    "python.linting.ignorePatterns": [
-        "**/site-packages/**/*.py",
-        ".vscode/*.py",
-        "setup.py"
-    ],
-    "python.linting.pylintArgs": [
-        "--init-hook='import sys; sys.path.append(\"/home/vscode/.local/lib/python3.11/site-packages\")'"
     ],
     "python.autoComplete.extraPaths": [
         "/home/vscode/.local/lib/python3.11/site-packages"
