--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -37,7 +37,9 @@
 				"streetsidesoftware.code-spell-checker",
 				"rogalmic.bash-debug",
 				"ms-python.pylint",
-				"ms-python.flake8"
+				"ms-python.flake8",
+				"ms-python.autopep8",
+				"ms-python.isort"
 			]
 		}
 	}
