--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,8 +21,10 @@
         "grepout",
         "htmlproofer",
         "indentless",
+        "isort",
         "lastindex",
         "litcoffee",
+        "livereload",
         "maint",
         "markupsafe",
         "materialx",
@@ -82,6 +84,7 @@
     ],
     "[python]": {
         "editor.tabSize": 4,
-        "editor.wordBasedSuggestions": false
-    }
+        "editor.wordBasedSuggestions": "off"
+    },
+    "pylint.importStrategy": "fromEnvironment",
 }
