--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -1,7 +1,8 @@
 cairosvg==2.7.1
-mike==2.0.0
+mike==2.1.1
 mkdocs-awesome-pages-plugin==2.9.2
-mkdocs-material==9.5.17
-mkdocs==1.5.3
+mkdocs-material==9.5.21
+mkdocs==1.6.0
 pillow==10.3.0
-pymdown-extensions==10.7.1
+pip-upgrader==1.4.15
+pymdown-extensions==10.8.1
