Clean up CSpell settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,57 +2,29 @@
     "cSpell.words": [
         "althack",
         "athackst",
-        "autobuild",
-        "autopep",
-        "bdist",
         "codeql",
-        "dedupe",
-        "devcontainer",
-        "devcontainers",
-        "dockerfiles",
-        "dockerhub",
-        "DOCPAGE",
-        "docstrings",
         "eamodio",
-        "endfor",
-        "endraw",
-        "fontawesome",
         "gemoji",
-        "grepout",
-        "htmlproofer",
-        "indentless",
         "isort",
-        "lastindex",
-        "litcoffee",
-        "livereload",
         "maint",
-        "markupsafe",
-        "materialx",
         "mkdocs",
         "mkdocsignore",
         "mkdocstrings",
-        "mypy",
-        "pycodestyle",
-        "pydocstyle",
+        "pycache",
         "pyfakefs",
         "pygments",
         "pylint",
         "pymdownx",
         "pypi",
-        "pytest",
-        "releasebot",
         "rogalmic",
-        "sdist",
-        "setuptools",
         "shakram",
-        "superfences",
         "thackston",
-        "twemoji",
         "unwatch",
+        "venv",
         "VPNW",
-        "yapf",
         "yzhang"
     ],
+    "cSpell.allowCompoundWords": true,
     "files.associations": {
         "*.bats": "shellscript"
     },
