--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,6 +54,9 @@
     "python.analysis.extraPaths": [
         "/home/vscode/.local/lib/python3.11/site-packages"
     ],
+    "pylint.args": [
+         "--init-hook='import sys; sys.path.append(\"/home/vscode/.local/lib/python3.11/site-packages\")'"
+    ],
     "[python]": {
         "editor.tabSize": 4,
         "editor.wordBasedSuggestions": "off"
