Change doc label to documentation

--- a/.github/pr-labeler.yml
+++ b/.github/pr-labeler.yml
@@ -1,4 +1,5 @@
 feature: ['feature/*', 'feat/*', 'new/*']
 bug: ['fix/*', 'bugfix/*', 'bug/*']
 maintenance: ['chore/*', 'maint/*', 'noop/*', 'no-op/*', 'upkeep/*', 'dev/*']
-docs: ['docs/*', 'doc/*']
+documentation: ['docs/*', 'doc/*']
+dependencies: ['deps/*', 'dependencies/*']
