--- a/.github/workflows/release_draft.yml
+++ b/.github/workflows/release_draft.yml
@@ -38,7 +38,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           token: ${{ secrets.RELEASEBOT_TOKEN }}
-      - name: Bump setup.py
+      - name: Bump VERSION
         run: |
           echo "Bumping version to ${VERSION}"
           echo "${VERSION}" > VERSION
