--- a/examples/ok-with-mkdocstrings/mkdocs-test.yml
+++ b/examples/ok-with-mkdocstrings/mkdocs-test.yml
@@ -4,4 +4,7 @@
 site_name: ok-with-mkdocstrings
 plugins:
   - simple
-  - mkdocstrings
+  - mkdocstrings:
+      handlers:
+        python:
+          paths: [examples/ok-with-mkdocstrings, .]
