--- a/requirements.txt
+++ b/requirements.txt
@@ -7,16 +7,16 @@ mike==2.1.3
 mkdocs-awesome-pages-plugin==2.10.1
 mkdocs-click==0.8.1
 mkdocs-macros-plugin==1.3.7
-mkdocs-material==9.6.7
+mkdocs-material==9.6.9
 mkdocs==1.6.1
-mkdocstrings-python-legacy==0.2.4
-mkdocstrings==0.28.2
+mkdocstrings-python
+mkdocstrings==0.29.0
 pillow==11.1.0
 pip-upgrader==1.4.15
 pydocstyle==6.3.0
-pyfakefs==5.7.4
+pyfakefs==5.8.0
 pymdown-extensions==10.14.3
 PyYAML==6.0.2
 hatch==1.14.0
-typing-extensions==4.12.2
-mkdocs-git-revision-date-localized-plugin==1.4.1
+typing-extensions==4.13.0
+mkdocs-git-revision-date-localized-plugin==1.4.5
