--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3', '3.9', '3.10', '3.11', '3.12']
+        python-version: ['3', '3.10', '3.11', '3.12']
       fail-fast: false
     steps:
       - uses: actions/checkout@v5
@@ -61,6 +61,7 @@ jobs:
           ignore_urls: |
             https://twitter.com/althack
             https://fonts.gstatic.com
+            https://docs.docker.com/
           swap_urls: |
             ^.*althack.dev\/mkdocs-simple-plugin:
             ^\/mkdocs-simple-plugin:
@@ -73,3 +74,10 @@ jobs:
           name: 'github-pages'
           path: ${{ steps.mkdocs.outputs.artifact }}
           retention-days: 1
+
+  complete:
+    needs: [test, lint, check-docs]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Complete
+        run: echo "All checks passed!"
